[tool.poetry]
name = "to-do-app"
version = "0.1.0"
description = ""
authors = ["Shivansh Goel <shivanshgoel009@gmail.com>"]
readme = "README.md"
packages = [{include = "to_do_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
psycopg2 = "^2.9.6"
sqlalchemy = "^2.0.15"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
